# bireco

./: README.md  TODO.md
.claude/: CLAUDE.md  settings.local.json
backend/: .gitignore  Cargo.toml  openapi.json  package.json  swagger-ui.html  wrangler.toml
backend/.wrangler/tmp/bundle-HzZUgL/: middleware-insertion-facade.js  middleware-loader.entry.ts
backend/.wrangler/tmp/bundle-VQxnHr/: middleware-insertion-facade.js  middleware-loader.entry.ts
backend/.wrangler/tmp/bundle-s7wpq0/: middleware-loader.entry.ts
backend/.wrangler/tmp/dev-oFF8ky/: 9605477f1a9450da3ec9591de1fd966e5a655748-index.wasm  shim.js  shim.js.map
backend/.wrangler/tmp/dev-urDjFy/: 581f4b367a527f5b5fec24d3cac838b6590b060f-index.wasm  shim.js  shim.js.map
backend/.wrangler/tmp/dev-wNNZuw/: shim.js  shim.js.map
backend/migrations/: 0001_initial_schema.sql
backend/scripts/: generate-migration.js
backend/src/: api_docs.rs  lib.rs
backend/src/dtos/: book.rs  common.rs  mod.rs  review.rs  user.rs
backend/src/entities/: book.rs  common.rs  draft.rs  mod.rs  review.rs  user.rs
backend/src/handlers/: auth.rs  books.rs  health.rs  mod.rs  reviews.rs
backend/src/repositories/: book_repository.rs  draft_repository.rs  mod.rs  review_repository.rs  user_repository.rs
backend/src/use_cases/: auth_use_case.rs  auth_use_case_old.rs  book_use_case.rs  draft_use_case.rs  mod.rs  review_use_case.rs
docs/: README.md
docs/api/: specification.md
frontend/: .env.example  .env.prod  .env.production  package-lock.json  package.json
hello-test/: Cargo.toml  wrangler.toml
(+23 files in other folders)
